basic next-uath functionality has been added

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^2.24.0",
     "mongodb": "^3.5.9",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
